# learnMe

./: .claudeignore  .gitignore  CLAUDE.full.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  install.sh  mockDeck.json  package-lock.json  package.json  playwright.config.ts  playwright.tauri.config.ts  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V1__init.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: anki.rs  card.rs  category.rs  deck.rs  mod.rs  review.rs  session.rs  settings.rs  stats.rs  study.rs  test_utils.rs
src-tauri/src/core/: error.rs  types.rs
src-tauri/src/methods/: mod.rs
src-tauri/src/methods/anki/: export.rs  fsrs.rs  import.rs  mod.rs
src-tauri/src/repo/: card.rs  category.rs  mod.rs  review_log.rs  settings.rs  study.rs
src-tauri/src/session/: checksum.rs  export.rs  import.rs  mod.rs  types.rs
src-tauri/src/stats/: mod.rs
src-tauri/tests/: phase1_integration.rs  phase2_integration.rs  phase2_unit.rs  phase3_integration.rs  phase3_unit.rs  phase4_integration.rs  phase4_unit.rs  phase6_integration.rs  phase6_unit.rs  phase7_5_unit.rs  phase7_integration.rs  phase7_unit.rs
src-tauri/tests/snapshots/: phase2_unit__apply_review_new_good_determinism.snap  phase3_integration__phase3_roundtrip_cards.snap  phase3_unit__phase3_export_payload.snap  phase7_integration__roundtrip_large__first5.snap  phase7_integration__roundtrip_large__first5.snap.new
(+112 files in other folders)
